--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "Unity"
   ],
   "author": {
-    "name": "Maarten R. Struijk Wilbrink",
+    "name": "SOSXR",
     "email": "sosxr@fsw.leidenuniv.nl",
     "url": "https://researchwiki.solo.universiteitleiden.nl/xwiki/bin/view/Main/"
   }
