--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "com.sosxr.",
+  "name": "com.sosxr.updatepublisher",
   "version": "1.0.0",
-  "displayName": "",
-  "description": "",
+  "displayName": "Update Publisher",
+  "description": "A package that provides a simple way to hook into the (Fixed/Late) Update loop in Unity.",
   "unity": "2021.3",
   "dependencies": {
     
